<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Orange">

    <EditText
        android:id="@+id/NameBox"
        android:hint="@string/MapName"
        android:textColorHint="@color/Orange"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:ems="10"
        android:textColor="@color/Orange"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Owner"
        android:hint="@string/Owner"
        android:layout_width="342dp"
        android:textColorHint="@color/Orange"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/MapType"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/MapType"
        android:inputType="textPersonName"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/Orange"
        android:textColorHint="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HeaderAddMap"
        android:textColor="@color/White"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintVertical_bias="0.054"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/Address"
        android:inputType="textPostalAddress"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/Orange"
        android:textColorHint="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/White"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/Orange"
        android:textColorHint="@color/Orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/toMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go"
        android:background="@drawable/button"
        android:textColor="@color/Green"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="toMap"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.928"
        tools:ignore="HardcodedText" />
</android.support.constraint.ConstraintLayout>